--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
         <section>
             <h1
                 style="font-size: 50px; font-weight: bold;
-    font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold;color: rgba(255, 255, 255, 0.7);">
+    font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
                 Under construction.</h1>
             <p>This site is in development. Your consideration will be appreciated.</p><a
                 href="interactiveVisual.html" style="color: white;">Link to the interactive
@@ -51,9 +51,9 @@
     <div id="mySidenav" class="sidenav">
         <a href="home.html">Home</a>
         <a href="dev.html">Development</a>
-        <a href="#" style="color:rgb(214, 214, 214);">UX</a>
+        <a href="ux.html">UX</a>
+        <a href="sco.html">Strategy & Concept</a>
         <a href="#" style="color:rgb(214, 214, 214);">Project</a>
-        <a href="#" style="color:rgb(214, 214, 214);">Strategy & Concept</a>
     </div>
 
     <!-- Scripts -->
