--- a/sco.html
+++ b/sco.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <title>Home</title>
+    <title>SCO</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 
@@ -13,30 +13,22 @@
     <div id="main">
         <!-- BODY HEADER____________________________________________________________________________________________________________ -->
         <header>
-            <div class="headercontainer">
-                <span class="navButton" onclick="openNav()">&#9776;</span>
-                <div class="logo">
-                    <!-- <a href="home.html" style="color: rgba(255, 255, 255, 0.4); margin: 0 px">Ar</a> -->
-                    <!-- <h1 style="color: white;">"LOGO"</h1> -->
-                    <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
-                </div>
-                <!-- <div class="headerplaceholder"></div> -->
-            </div>
+            <button class="hamburger hamburger--collapse" type="button">
+                <span class="hamburger-box">
+                    <span class="hamburger-inner"></span>
+                </span>
+            </button>
         </header>
 
         <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
-            SCO
+            Strategy & Concept
         </div>
-
         <section class="content">
-            <br />
-
-            <section class="strategy">
-                <h3>Strategy</h3>
-                <article id="TargetAudience">
-                    <h4>Target Audience</h4>
+            <h1>Strategy</h1>
+            <article id="TargetAudience">
+                <h1>Target Audience</h4>
                     <p>Nullam consequat erat sed velit porta, sed iaculis velit lacinia. Nam placerat scelerisque odio,
                         a
                         mattis
@@ -50,41 +42,36 @@
                         Proin
                         bibendum eros vel est iaculis faucibus.</p>
                     <p>[place holder for target audience assignment]</p>
-                </article>
-            </section>
+            </article>
 
-            <br />
-
-            <section class="concepting">
-                <h3>Concepting</h3>
-                <section id="assignment1">
-                    <h4>Visual Association</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
-                            facilisis a
-                            sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat.
-                            Integer id
-                            elit blandit lectus dignissim molestie. Curabitur sit amet quam quam. Fusce imperdiet, arcu
-                            sed
-                            volutpat facilisis, arcu diam tincidunt justo, nec viverra nisi elit eget purus. Morbi
-                            pellentesque
-                            dui id purus eleifend tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et
-                            ultrices
-                            posuere cubilia Curae; Curabitur augue nisi, suscipit at magna quis, dapibus fringilla
-                            felis.
-                            Pellentesque auctor tellus congue ornare fermentum.</p>
-                        <p>[Placeholder for flipbook]</p>
-                </section>
-            </section>
+            <h1>Concept</h1>
+            <article>
+                <h1>Visual Association</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
+                    facilisis a
+                    sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat.
+                    Integer id
+                    elit blandit lectus dignissim molestie. Curabitur sit amet quam quam. Fusce imperdiet, arcu
+                    sed
+                    volutpat facilisis, arcu diam tincidunt justo, nec viverra nisi elit eget purus. Morbi
+                    pellentesque
+                    dui id purus eleifend tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et
+                    ultrices
+                    posuere cubilia Curae; Curabitur augue nisi, suscipit at magna quis, dapibus fringilla
+                    felis.
+                    Pellentesque auctor tellus congue ornare fermentum.</p>
+                <p>[Placeholder for flipbook]</p>
+            </article>
         </section>
     </div>
 
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
-        <a href="home.html">HOME</a>
-        <a href="dev.html">DEV</a>
-        <a href="#">PTM</a>
-        <a href="#">UX</a>
-        <a href="sco.html">SCO</a>
+        <a href="home.html">Home</a>
+        <a href="dev.html">Development</a>
+        <a href="ux.html">UX</a>
+        <a href="sco.html">Strategy & Concept</a>
+        <a href="#" style="color:rgb(214, 214, 214);">Project</a>
     </div>
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
