--- a/ux.html
+++ b/ux.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>DEV</title>
+    <title>UX</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
@@ -16,16 +16,16 @@
         <header>
             <button class="hamburger hamburger--collapse" type="button">
                 <span class="hamburger-box">
-                  <span class="hamburger-inner"></span>
+                    <span class="hamburger-inner"></span>
                 </span>
-              </button>
+            </button>
         </header>
 
         <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
-                Development
-            </div>
+            User Experience Design
+        </div>
 
         <section class="content">
             <article style="padding-top:0px;">
