--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
         <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <!-- Content -->
-        <section>
+        <section class="content">
             <h1
                 style="font-size: 50px; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
