--- a/dev.html
+++ b/dev.html
@@ -16,30 +16,48 @@
         <header>
             <button class="hamburger hamburger--collapse" type="button">
                 <span class="hamburger-box">
-                  <span class="hamburger-inner"></span>
+                    <span class="hamburger-inner"></span>
                 </span>
-              </button>
+            </button>
         </header>
 
         <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
-                Development
-            </div>
+            Development
+        </div>
 
         <section class="content">
-            <article style="padding-top:0px;">
-                <h2>SPRINT 0</h2>
-                <!-- <p>During Sprint 0, it was a huge starting point for me. Throughout the summer i have been learning basic Front-End development course and in Sprint 0 i have been able to try applying my knowledge and started developing my portfolio by experimenting, trial and error.  -->
+            <article>
+                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
+                <h2 style="font-size: 40px;margin:0px;">Learning About Front-End Web Development Basics</h2>
+                <p>Since before this semester starts i have been
+                    preparing and learning the basics of Front-End Web Development which consist of HTML(Hyper Text
+                    Markup Language) as the backbone of any website process, CSS(Cascading Style Sheets) to control
+                    the
+                    presentation aspect of the site, and JavaScript to transform a static HTML page into a dynamic
+                    interface.
                 </p>
             </article>
             <article>
-                <h2>SPRINT 1</h2>
-                <!-- <p>In Sprint 1, my fundamental skill had developed well. The framework of my portfolio has been layed and during this time i took my oppurtunity to sharpen my Javascript skills by making visuals with the three.js library and to implement it unto my portfolio.</p> -->
+                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 1</h1>
+                <h2 style="font-size: 40px;margin:0px;">Source Control, A Life Saving Tool</h2>
+                <p>As i progress further in my development, things started to get much more complex. During this time i
+                    needed something to manage, organize, and keep track of my syntax. By using GIT i am able to keep
+                    track of each revision and to also experiment implementing(or whether to discard) a POC.</p>
             </article>
             <article>
-                <h2>SPRINT 2</h2>
-                <!-- <p>During Sprint 2, i took a step back as i realized that KISS or "Keep it simple and straightforward." is very important. I took my time to clean my syntax and to try to make pragmatics as clear as possible.</p> -->
+                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 2</h1>
+                <h2 style="font-size: 40px;margin:0px;">Mastering JavaScript</h2>
+                <p>JavaScript was my first scripting language that i ever learnt. I know how important JavaScript is in
+                    a web development enviroment as it is one of the most popular and widely used programming languanges
+                    in the world.</p>
+                <p> At the beginning i was very unfamiliar with it and i was looking for a method on how to improve my
+                    JavaScript skill and i have been always intrigued on the art of making visuals.
+                    So i decided that i want to "hit two birds with one stone" by trying to make an interactive visual
+                    art by using Three.js(a JavaScript library used to create and display animated 3D computer graphics
+                    in a web browser) that you can see is now used as a dynamic background for this
+                    portofolio.</p>
             </article>
         </section>
     </div>
