--- a/home.html
+++ b/home.html
@@ -33,12 +33,12 @@
         <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <!-- Content -->
-        <section class="content">
+        <section class="content" style="margin-top: 8vw; position: fixed;">
             <h1
-                style="font-size: 50px; font-weight: bold;
+                style="margin-bottom: 0px; font-size: 72px; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
-                Under construction.</h1>
-            <p>This site is in development. Your consideration will be appreciated.</p><a
+                Welcome.</h1>
+            <p style="margin-top: 0px;">This site is in development. Your consideration will be appreciated.</p><a
                 href="interactiveVisual.html" style="color: white;">Link to the interactive
             visual.</a>
         </section>
