--- a/interactiveVisual.html
+++ b/interactiveVisual.html
@@ -18,7 +18,7 @@
             </div>
         </header>
 
-        <iframe src="visual1.html" frameborder="0" scrolling="no"></iframe>
+        <iframe style="overflow: hidden;" src="visual1.html" frameborder="0" scrolling="no"></iframe>
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script> -->
