--- a/sco.html
+++ b/sco.html
@@ -26,9 +26,9 @@
             Strategy & Concept
         </div>
         <section class="content">
-            <h1>Strategy</h1>
+            <h2 style="font-size: 40px;margin:0px;">Strategy</h2>
             <article id="TargetAudience">
-                <h1>Target Audience</h4>
+                <h2 style="font-size: 40px;margin:0px;">Target Audience</h4>
                     <p>Nullam consequat erat sed velit porta, sed iaculis velit lacinia. Nam placerat scelerisque odio,
                         a
                         mattis
@@ -44,9 +44,9 @@
                     <p>[place holder for target audience assignment]</p>
             </article>
 
-            <h1>Concept</h1>
+            <h2 style="font-size: 40px;margin:0px;">Concept</h2>
             <article>
-                <h1>Visual Association</h1>
+                <h2 style="font-size: 40px;margin:0px;">Visual Association</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
                     facilisis a
                     sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat.
@@ -64,7 +64,6 @@
             </article>
         </section>
     </div>
-
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
         <a href="home.html">Home</a>
