--- a/ux.html
+++ b/ux.html
@@ -28,20 +28,17 @@
         </div>
 
         <section class="content">
-            <article style="padding-top:0px;">
-                <h2>SPRINT 0</h2>
-                <!-- <p>During Sprint 0, it was a huge starting point for me. Throughout the summer i have been learning basic Front-End development course and in Sprint 0 i have been able to try applying my knowledge and started developing my portfolio by experimenting, trial and error.  -->
-                </p>
-            </article>
-            <article>
-                <h2>SPRINT 1</h2>
-                <!-- <p>In Sprint 1, my fundamental skill had developed well. The framework of my portfolio has been layed and during this time i took my oppurtunity to sharpen my Javascript skills by making visuals with the three.js library and to implement it unto my portfolio.</p> -->
-            </article>
-            <article>
-                <h2>SPRINT 2</h2>
-                <!-- <p>During Sprint 2, i took a step back as i realized that KISS or "Keep it simple and straightforward." is very important. I took my time to clean my syntax and to try to make pragmatics as clear as possible.</p> -->
-            </article>
-        </section>
+                <article>
+                        <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
+                        <h2 style="font-size: 40px;margin:0px;">Lorem Ipsum</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt risus a consequat porta.
+                            Pellentesque a elementum lorem, sed eleifend augue. Curabitur tortor mi, fermentum id vehicula a,
+                            tincidunt at velit. Donec gravida porta ante, at lobortis libero eleifend ut. Donec vitae rutrum
+                            nunc, ut feugiat libero. Nullam quis sem et risus molestie ornare. Proin ornare lobortis luctus. Sed
+                            dui lacus, interdum eget maximus at, interdum a ex. Interdum et malesuada fames ac ante ipsum primis
+                            in faucibus. Curabitur risus quam, gravida id dui bibendum, iaculis iaculis urna.</p>
+                    </article>
+            </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
