--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <body>
     <!-- BODY HEADER____________________________________________________________________________________________________________ -->
     <div id="main">
-        <header>
+        <header style="background: none;">
             <!-- <div class="headercontainer"> -->
             <button class="hamburger hamburger--collapse" type="button">
                 <span class="hamburger-box">
@@ -41,6 +41,7 @@
             <p style="margin-top: 0px;">This site is in development. Your consideration will be appreciated.</p><a
                 href="interactiveVisual.html" style="color: white;">Link to the interactive
             visual.</a>
+            <footer><p>ver1.1.2</p></footer>
         </section>
 
 
