--- a/ux.html
+++ b/ux.html
@@ -28,17 +28,27 @@
         </div>
 
         <section class="content">
-                <article>
-                        <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
-                        <h2 style="font-size: 40px;margin:0px;">Lorem Ipsum</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt risus a consequat porta.
-                            Pellentesque a elementum lorem, sed eleifend augue. Curabitur tortor mi, fermentum id vehicula a,
-                            tincidunt at velit. Donec gravida porta ante, at lobortis libero eleifend ut. Donec vitae rutrum
-                            nunc, ut feugiat libero. Nullam quis sem et risus molestie ornare. Proin ornare lobortis luctus. Sed
-                            dui lacus, interdum eget maximus at, interdum a ex. Interdum et malesuada fames ac ante ipsum primis
-                            in faucibus. Curabitur risus quam, gravida id dui bibendum, iaculis iaculis urna.</p>
-                    </article>
-            </section>
+            <article>
+                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
+                <h1 style="font-size: 40px;margin: 20px 0px 0px 0px;">Research</h1>
+                <h2 style="font-size: 40px;margin:0px;">Interview Preparation</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt risus a consequat porta.
+                    Pellentesque a elementum lorem, sed eleifend augue. Curabitur tortor mi, fermentum id vehicula a,
+                    tincidunt at velit. Donec gravida porta ante, at lobortis libero eleifend ut. Donec vitae rutrum
+                    nunc, ut feugiat libero. Nullam quis sem et risus molestie ornare. Proin ornare lobortis luctus. Sed
+                    dui lacus, interdum eget maximus at, interdum a ex. Interdum et malesuada fames ac ante ipsum primis
+                    in faucibus. Curabitur risus quam, gravida id dui bibendum, iaculis iaculis urna.</p>
+                <h1 style="font-size: 40px;margin: 20px 0px 0px 0px;">Prototyping</h1>
+                <h2 style="font-size: 40px;margin:0px;">Storyboard</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt risus a consequat porta.
+                    Pellentesque a elementum lorem, sed eleifend augue. Curabitur tortor mi, fermentum id vehicula a,
+                    tincidunt at velit. Donec gravida porta ante, at lobortis libero eleifend ut. Donec vitae rutrum
+                    nunc, ut feugiat libero. Nullam quis sem et risus molestie ornare. Proin ornare lobortis luctus. Sed
+                    dui lacus, interdum eget maximus at, interdum a ex. Interdum et malesuada fames ac ante ipsum primis
+                    in faucibus. Curabitur risus quam, gravida id dui bibendum, iaculis iaculis urna.</p>
+            </article>
+
+        </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
