--- a/ux.html
+++ b/ux.html
@@ -29,16 +29,39 @@
 
         <section class="content">
             <article>
+                <h2 style="font-style: italic;font-size: 40px;margin:0px;">Essentials of User-Centered Design</h2>
+                <h2 style="font-size: 40px;margin:0px;">Empathize</h2>
+                <p>The first step is to empathize with in the target group. It is of great importance since otherwise my
+                    own assumptions can be subjective and could compromise the design process. In this process it is
+                    necessary to research the current target audience and to immerse myself with the end user.</p>
+                <h2 style="font-size: 40px;margin:0px;">Define</h2>
+                <p>This step is important for determining the "problem". What needs to be done is defined in this
+                    phase. This is based on the user needs from empathizing with end user.</p>
+                <h2 style="font-size: 40px;margin:0px;">Ideate</h2>
+                <p>From the information gathered from the previous steps, we can start generating ideas. To brainstorm
+                    and to start devising creative solutions to solve the problem. By the end of this step, a concept
+                    should have been devised.</p>
+                <h2 style="font-size: 40px;margin:0px;">Prototype</h2>
+                <p>Based from the concept, a prototype can start to be developed. A prototype does not necessarily have
+                    to represent the end product and is used to determine whether if the solution(s) will work well or
+                    not for the problem.</p>
+                <h2 style="font-size: 40px;margin:0px;">Test</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt risus a consequat porta.
+                    Pellentesque a elementum lorem, sed eleifend augue. Curabitur tortor mi, fermentum id vehicula a,
+                    tincidunt at velit.</p>
+            </article>
+            <article>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
-                <h1 style="font-size: 40px;margin: 20px 0px 0px 0px;">Research</h1>
+                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Research</h1>
                 <h2 style="font-size: 40px;margin:0px;">Interview Preparation</h2>
+                <p></p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt risus a consequat porta.
                     Pellentesque a elementum lorem, sed eleifend augue. Curabitur tortor mi, fermentum id vehicula a,
                     tincidunt at velit. Donec gravida porta ante, at lobortis libero eleifend ut. Donec vitae rutrum
                     nunc, ut feugiat libero. Nullam quis sem et risus molestie ornare. Proin ornare lobortis luctus. Sed
                     dui lacus, interdum eget maximus at, interdum a ex. Interdum et malesuada fames ac ante ipsum primis
                     in faucibus. Curabitur risus quam, gravida id dui bibendum, iaculis iaculis urna.</p>
-                <h1 style="font-size: 40px;margin: 20px 0px 0px 0px;">Prototyping</h1>
+                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Prototyping</h1>
                 <h2 style="font-size: 40px;margin:0px;">Storyboard</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt risus a consequat porta.
                     Pellentesque a elementum lorem, sed eleifend augue. Curabitur tortor mi, fermentum id vehicula a,
@@ -47,7 +70,11 @@
                     dui lacus, interdum eget maximus at, interdum a ex. Interdum et malesuada fames ac ante ipsum primis
                     in faucibus. Curabitur risus quam, gravida id dui bibendum, iaculis iaculis urna.</p>
             </article>
-
+            <!-- <article>
+                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 1</h1>
+                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Research</h1>
+                <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Prototyping</h1>
+            </article> -->
         </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
