--- a/home.html
+++ b/home.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 
-<body>
+<body style="background: linear-gradient(270deg, #0000ff, #ff0000);
+background-size: 400% 400%;
+
+-webkit-animation: AnimationName 12s ease infinite;
+-moz-animation: AnimationName 12s ease infinite;
+-o-animation: AnimationName 12s ease infinite;
+animation: AnimationName 12s ease infinite;">
     <!-- BODY HEADER____________________________________________________________________________________________________________ -->
     <div id="main">
         <header style="background: none;">
