--- a/ux.html
+++ b/ux.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 
-<body style="background: linear-gradient(270deg, #ff00ff, #0000ff);
+<body style="background: linear-gradient(270deg, #0ce8b8, #e80c84);
 background-size: 400% 400%;
 
 -webkit-animation: AnimationName 30s ease infinite;
 -moz-animation: AnimationName 30s ease infinite;
--o-animation: AnimationName 30s ease infinite;
 animation: AnimationName 30s ease infinite;
 
 @-webkit-keyframes AnimationName {
@@ -23,11 +22,6 @@ animation: AnimationName 30s ease infinite;
     100%{background-position:0% 50%}
 }
 @-moz-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@-o-keyframes AnimationName {
     0%{background-position:0% 50%}
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
@@ -73,9 +67,10 @@ animation: AnimationName 30s ease infinite;
                     to represent the end product and is used to determine whether if the solution(s) will work well or
                     not for the problem.</p>
                 <h2 style="font-size: 40px;margin:0px;">Test</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt risus a consequat porta.
-                    Pellentesque a elementum lorem, sed eleifend augue. Curabitur tortor mi, fermentum id vehicula a,
-                    tincidunt at velit.</p>
+                <p>After developing the prototype and determining the specific target audience. A test can be commenced
+                    to determine the efficacy of the prototype. If the outcome result does not satisfy, we can go back
+                    to the previous phases and to iterate until eventually the result gets closer to the desired
+                    outcome.</p>
             </article>
             <article>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
