--- a/dev.html
+++ b/dev.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 
-<body style="background: linear-gradient(270deg, #00ff00, #0000ff);
+<body style="background: linear-gradient(270deg, #0000ff, #0ce8e1);
 background-size: 400% 400%;
 
 -webkit-animation: AnimationName 30s ease infinite;
@@ -75,7 +75,7 @@ animation: AnimationName 30s ease infinite;
             </article>
             <article>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 2</h1>
-                <h2 style="font-size: 40px;margin:0px;">Mastering JavaScript</h2>
+                <h2 style="font-size: 40px;margin:0px;">Honing JavaScript</h2>
                 <p>JavaScript was my first scripting language that i ever learnt. I know how important JavaScript is in
                     a web development enviroment as it is one of the most popular and widely used programming languanges
                     in the world.</p>
