--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 
 <body style="background: linear-gradient(270deg, #0000ff, #ff0000);
@@ -39,7 +39,7 @@ animation: AnimationName 12s ease infinite;">
         <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <!-- Content -->
-        <section class="content" style="margin-top: 8vw; position: fixed;">
+        <section class="content" style="margin-top: 8vw; position: fixed;background: none;color: white;">
             <h1
                 style="margin-bottom: 0px; font-size: 72px; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
