--- a/interactiveVisual.html
+++ b/interactiveVisual.html
@@ -10,7 +10,13 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body style="background: linear-gradient(270deg, #0000ff, #ff0000);
+background-size: 400% 400%;
+
+-webkit-animation: AnimationName 12s ease infinite;
+-moz-animation: AnimationName 12s ease infinite;
+-o-animation: AnimationName 12s ease infinite;
+animation: AnimationName 12s ease infinite;">
         <!-- BODY HEADER____________________________________________________________________________________________________________ -->
         <header style="border-bottom: 0px;background: none;">
             <div class="headercontainer">
