--- a/ux.html
+++ b/ux.html
@@ -6,14 +6,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 
-<body style="background: linear-gradient(270deg, #0ce8b8, #e80c84);
+<body style="background: linear-gradient(270deg, #0000ff, #e80cce);
 background-size: 400% 400%;
 
 -webkit-animation: AnimationName 30s ease infinite;
 -moz-animation: AnimationName 30s ease infinite;
+-o-animation: AnimationName 30s ease infinite;
 animation: AnimationName 30s ease infinite;
 
 @-webkit-keyframes AnimationName {
@@ -22,6 +23,11 @@ animation: AnimationName 30s ease infinite;
     100%{background-position:0% 50%}
 }
 @-moz-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-o-keyframes AnimationName {
     0%{background-position:0% 50%}
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
@@ -77,12 +83,13 @@ animation: AnimationName 30s ease infinite;
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Research</h1>
                 <h2 style="font-size: 40px;margin:0px;">Interview Preparation</h2>
                 <p></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt risus a consequat porta.
-                    Pellentesque a elementum lorem, sed eleifend augue. Curabitur tortor mi, fermentum id vehicula a,
-                    tincidunt at velit. Donec gravida porta ante, at lobortis libero eleifend ut. Donec vitae rutrum
-                    nunc, ut feugiat libero. Nullam quis sem et risus molestie ornare. Proin ornare lobortis luctus. Sed
-                    dui lacus, interdum eget maximus at, interdum a ex. Interdum et malesuada fames ac ante ipsum primis
-                    in faucibus. Curabitur risus quam, gravida id dui bibendum, iaculis iaculis urna.</p>
+                <p>The purpose of the interview is to find out the needs of the client's target audience. This can be
+                    about the artist himself, the genre of the music that the artist is making, or even matters outside
+                    music such as what are the social media platforms the artist are planning to use and many others.
+                </p>
+                <h2 style="font-size: 40px;margin:0px;">Interview Result</h2>
+                <p>Conclusions of the interview reveals:
+                    Our client’s target group is mainly constituted out of women in the ages between 14–19 years old.</p>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Prototyping</h1>
                 <h2 style="font-size: 40px;margin:0px;">Storyboard</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt risus a consequat porta.
