--- a/sco.html
+++ b/sco.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
 </head>
 
-<body style="background: linear-gradient(270deg, #ffb200, #0000ff);
+<body style="background: linear-gradient(270deg, #0000ff, #00ff00);
 background-size: 400% 400%;
 
 -webkit-animation: AnimationName 30s ease infinite;
