home.html to index.html rename

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ animation: AnimationName 12s ease infinite;">
 
     <!-- Off-canvas menu -->
     <div id="mySidenav" class="sidenav">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="dev.html">Development</a>
         <a href="ux.html">UX</a>
         <a href="sco.html">Strategy & Concept</a>
