--- a/sco.html
+++ b/sco.html
@@ -93,7 +93,7 @@ animation: AnimationName 30s ease infinite;
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="dev.html">Development</a>
         <a href="ux.html">UX</a>
         <a href="sco.html">Strategy & Concept</a>
