--- a/dev.html
+++ b/dev.html
@@ -58,7 +58,7 @@ animation: AnimationName 30s ease infinite;
             <article>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
                 <h2 style="font-size: 40px;margin:0px;">Learning About Front-End Web Development Basics</h2>
-                <p>Since before this semester starts i have been
+                <p>Since before the semester starts i have been
                     preparing and learning the basics of Front-End Web Development which consist of HTML(Hyper Text
                     Markup Language) as the backbone of any website process, CSS(Cascading Style Sheets) to control
                     the
