added watermark footer

--- a/index.html
+++ b/index.html
@@ -25,15 +25,8 @@ animation: AnimationName 12s ease infinite;">
                     <span class="hamburger-inner"></span>
                 </span>
             </button>
-            <!-- <div class="logo"> -->
-            <!-- <a href="home.html" style="color: rgba(255, 255, 255, 0.4); margin: 0 px">Ar</a> -->
-            <!-- <h1 style="color: white;">"LOGO"</h1> -->
-            <!-- <a href="home.html"><img src="content/001logo.png" id="myLogo"></a> -->
-            <!-- </div> -->
             <div class="headerplaceholder"></div>
             <div class="headerplaceholder"></div>
-
-            <!-- </div> -->
         </header>
 
         <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
@@ -44,7 +37,7 @@ animation: AnimationName 12s ease infinite;">
                 style="margin-bottom: 0px; font-size: 72px; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
                 Welcome.</h1>
-            <p style="margin-top: 0px;">This site is in development. Your consideration will be appreciated.</p><a
+            <p style="margin-top: 0px;">This site is in development. Your consideration is advised.</p><a
                 href="interactiveVisual.html" style="color: white;">Link to the interactive
             visual.</a>
         </section>
