--- a/sco.html
+++ b/sco.html
@@ -104,6 +104,9 @@ animation: AnimationName 30s ease infinite;
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="js/main.js"></script>
+    <footer style="font-size: 10vw;">NOT FINAL</footer>
+
+
 </body>
 
 </html>
